--- a/ComeniusCarrousel/App_Code/KlasRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/KlasRepo.cshtml
@@ -58,16 +58,16 @@
         return null;
     }
 
-    public static Klas GetKlasId(string klasNaam, string niveau)
+    public static int GetKlasId(string klasNaam)
     {
         var db = Database.Open(App.DataBase);
-        var data = db.QuerySingle("SELECT KlasId FROM Klas WHERE LOWER(KlasNaam) = LOWER(@0) AND LOWER (Niveau) = LOWER(@1)", klasNaam, niveau);
+        var data = db.QuerySingle("SELECT KlasId FROM Klas WHERE LOWER(KlasNaam) = LOWER(@0)", klasNaam);
         if(data != null)
         {
             return data.KlasId;
         }
         db.Close();
-        return null;
+        return -1;
     }
 
     public static void MakeKlas(string klasNaam)
@@ -78,12 +78,12 @@
         db.Close();
     }
 
-    public static bool ValidateKlas(string klasNaam, string niveau)
+    public static bool ValidateKlas(string klasNaam)
     {
         var db = Database.Open(App.DataBase);
-        var klasCheck = db.QuerySingle("SELECT KlasNaam FROM Klas WHERE LOWER(Klas) = LOWER(@0) AND LOWER(Niveau) = LOWER(@1)", klasNaam, niveau);
+        var klasCheck = db.QuerySingle("SELECT KlasNaam FROM Klas WHERE LOWER(KlasNaam) = LOWER(@0)", klasNaam);
         db.Close();
-        if (klasCheck.KlasNaam == null){return false;}
+        if (klasCheck == null){return false;}
         else{return true;}
     }
 
