--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -5,8 +5,11 @@
 }
 <h2>Leerlingenoverzicht</h2>
 
+<a class="btn btn-success" href="~/Admin/Leerling/BulkLeerlingenToevoegen">
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Meerdere leerlingen aanmaken
+</a>
 <a class="btn btn-success" href="~/Admin/Leerling/LeerlingToevoegen">
-    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leerling aanmaken
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leerling toevoegen
 </a>
 
 <table class="table" style="margin-top: 16px;">
