--- a/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/_Layout.cshtml";
     Page.Title = "Klas wijzigen";
 
-    if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
+    if (!User.IsInRole("Admin"))
     {
         Response.Redirect("~/");
     }
