--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -9,7 +9,7 @@
     <span class="glyphicon glyphicon-plus"></span>&nbsp; Meerdere leerlingen aanmaken
 </a>
 <a class="btn btn-success" href="~/Admin/Leerling/LeerlingToevoegen">
-    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leerling toevoegen
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leerling aanmaken
 </a>
 
 <table class="table" style="margin-top: 16px;">
